--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,7 @@
 
 
 .work{
+    background-color: #f3f4fc;
     padding-top: 100px;
     padding-bottom: 70px;
 }
@@ -338,7 +339,7 @@
 }
 
 #footer{
-    background-color: #84fee0;
+    background-color: #3c3dc1;
 }
 
 .row .contact-box{
@@ -351,7 +352,7 @@
     font-size: 26px;
     font-weight: 700;
     line-height: 1.3;
-    color: #444444;
+    color: white;
     display: inline-block;
     padding: 10px;
     position: relative;
@@ -362,8 +363,22 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 1.3;
-    color: #444444;
+    color: white;
     display: inline-block;
     position: relative;
     z-index: 1;
+}
+
+#footer i{
+    color: white;
+}
+
+hr{
+    border-top: 3px outset white;
+}
+
+#footer i:hover {
+    color: #84fee0;
+    text-decoration: none;
+    transition: 0.5s;
 }
