--- a/css/style.css
+++ b/css/style.css
@@ -1,414 +1,467 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 .home {
-    background-image: url("../images/background2.jpeg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 100% 55%;
-    min-height: 800px;
-    position: relative;
-    overflow: hidden;
+  background-image: url("../images/background2.jpeg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 55%;
+  min-height: 800px;
+  position: relative;
+  overflow: hidden;
 }
 
 .home .titles {
-    width: 100%;
-    height: 100%;
-    min-height: 700px;
-    position: absolute;
-    padding: 0 80px;
-    top: 0;
-    background-color: rgb(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  min-height: 700px;
+  position: absolute;
+  padding: 0 5%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .home .titles-wrap {
-    margin-top: 300px;
+  margin-top: 300px;
 }
 
 .home h1 {
-    color: white;
-    width: 100%;
-    display: block;
-    margin: 0;
-    font-size: 45px;
-    font-weight: 500;
-    line-height: 1.7;
+  color: white;
+  width: 100%;
+  display: block;
+  margin: 0;
+  font-size: 2.8em;
+  font-weight: 500;
+  line-height: 1.7;
 }
 
 .home h1 span {
-    color: #84fee0;
+  color: #84fee0;
 }
 
 .home h2 {
-    color: white;
-    display: block;
-    font-size: 27px;
-    line-height: 1.7;
+  color: white;
+  display: block;
+  font-size: 1.7em;
+  line-height: 1.7;
 }
 
 .home h2 span {
-    color: white;
+  color: white;
 }
 
-.home p{
-    color: white;
-    font-size: 16px;
-    margin-top: 20px;
-    max-width: 450px;
+.home p {
+  color: white;
+  font-size: 1em;
+  margin-top: 20px;
+  max-width: 100%;
 }
 
 .btn {
-    color: #2e2e2e;
-    background-color: #84fee0;
-    font-size: 14px;
-    line-height: 40px;
-    letter-spacing: 0.5px;
-    text-align: center;
-    font-weight: 600;
-    text-transform: capitalize;
-    padding: 0 40px;
-    border-radius: 0;
-    position: relative;
-    display: inline-block;
-    border: 2px solid #84fee0;
+  color: #2e2e2e;
+  background-color: #84fee0;
+  font-size: 1em;
+  line-height: 40px;
+  letter-spacing: 0.5px;
+  text-align: center;
+  font-weight: 600;
+  text-transform: capitalize;
+  padding: 0 40px;
+  border-radius: 0;
+  position: relative;
+  display: inline-block;
+  border: 2px solid #84fee0;
+  cursor: pointer;
 }
 
 .btn:hover {
-    color: white;
-    background-color: #fca329;
-    text-decoration: none;
-    transition: 0.5s;
+  color: white;
+  background-color: #fca329;
+  text-decoration: none;
+  transition: 0.5s;
 }
 
+/* Media queries para ajustes responsivos */
+@media only screen and (max-width: 1280px) {
+    .work-box {
+        h5{
+            font-size: 12px;
+        }
+        p{
+            font-size: 12px; 
+         }
+    }
+}
 @media only screen and (max-width: 768px) {
-    .home .titles {
-        padding: 0 40px;
-        width: 100%;
+  .home .titles {
+    padding: 0 10px;
+    width: 100%;
+  }
+
+  .home h1 {
+    font-size: 2em;
+  }
+
+  .home h2,
+  .home p {
+    font-size: 1.2em;
+  }
+
+  .btn {
+    padding: 0 20px;
+    font-size: 0.9em;
+  }
+  .about-box,
+  .work-box {
+    height: 200px;
+    h5 {
+      font-size: 10px;
     }
-    .home h2,
-    .home p {
-        font-size: 20px;
+    p {
+      font-size: 10px;
     }
+  }
 }
 
 @media only screen and (max-width: 576px) {
-    .home h2,
-    .home p {
-        font-size: 18px;
+  .home h1 {
+    font-size: 1.8em;
+  }
+
+  .home h2,
+  .home p {
+    font-size: 1em;
+  }
+
+  .btn {
+    padding: 0 15px;
+    font-size: 0.8em;
+  }
+  .about-box,
+  .work-box {
+    padding: 10px;
+    h5 {
+      font-size: 12px;
     }
-    .home h1 {
-        font-size: 30px;
+    p {
+      font-size: 12px;
     }
+  }
 }
 
 @media only screen and (max-width: 350px) {
-    .home h2,
-    .home p {
-        font-size: 16px;
-    }
-    .home h1 {
-        font-size: 28px;
-    }
+  .home h1 {
+    font-size: 1.5em;
+  }
+
+  .home h2,
+  .home p {
+    font-size: 0.8em;
+  }
+
+  .btn {
+    padding: 0 10px;
+    font-size: 0.7em;
+  }
 }
 
-
-
+/* Sección services */
 .services {
-    background-color: #f3f4fc;
-    padding: 100px 0 70px 0;
+  background-color: #f3f4fc;
+  padding: 100px 0 70px 0;
 }
 
 .sec-title {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .sec-title h2 {
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.3;
-    color: #444444;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 10px 10px 0 0;
-    position: relative;
-    z-index: 1;
+  font-size: 2em;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #444444;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 10px 10px 0 0;
+  position: relative;
+  z-index: 1;
 }
 
 .sec-title h2::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    height: 70%;
-    z-index: -1;
-    background-color: #84fee0;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 70%;
+  z-index: -1;
+  background-color: #84fee0;
 }
 
 .services .service-box {
-    border: 1px solid #7f7f7fdd;
-    background-color: #ffffff;
-    padding: 30px;
-    margin-bottom: 30px;
+  border: 1px solid #7f7f7fdd;
+  background-color: #ffffff;
+  padding: 30px;
+  margin-bottom: 30px;
 }
 
 .services .service-box .icontitle {
-    overflow: hidden;
-    margin-bottom: 10px;
+  overflow: hidden;
+  margin-bottom: 10px;
 }
 
 .services .service-box .icontitle i {
-    float: left;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 21px;
-    color: #3c3dc1;
-    text-align: center;
+  float: left;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 21px;
+  color: #3c3dc1;
+  text-align: center;
 }
 
 .services .service-box .title {
-    padding: 8px 0 0 70px;
+  padding: 8px 0 0 70px;
 }
 
-
-.services .service-box .title h4{
-    font-size:18px;
-    font-weight: 700;
-    color: #2e2e2e;
-    text-transform: capitalize;
-    margin: 7px 0 0 0;
+.services .service-box .title h4 {
+  font-size: 1.1em;
+  font-weight: 700;
+  color: #2e2e2e;
+  text-transform: capitalize;
+  margin: 7px 0 0 0;
 }
 
-.services .service-box p{
-    margin: 0;
+.services .service-box p {
+  margin: 0;
 }
 
-.about{
-    background-image: url("../images/background.png");
-    padding-top: 100px;
-    padding-bottom: 70px;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+/* Sección about */
+.about {
+  background-image: url("../images/background.png");
+  padding-top: 100px;
+  padding-bottom: 70px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.about .sec-title h2{
-    color: white;
+.about .sec-title h2 {
+  color: white;
 }
 
 .about .sec-title h2::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    height: 70%;
-    z-index: -1;
-    background-color: transparent;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 70%;
+  z-index: -1;
+  background-color: transparent;
 }
 
-.about-box{
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    padding: 15px 15px 0 15px;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    height: 250px; 
+.about-box {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  padding: 15px 15px 0 15px;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 250px;
 }
 
-.about-box i{
-    color: #84fee0;
-    width: 100%;
-    display: inline-block;
-    text-align: center;
-    
+.about-box i {
+  color: #84fee0;
+  width: 100%;
+  display: inline-block;
+  text-align: center;
 }
+
 .about-text {
-    color: white; 
-    text-align: center; 
+  color: white;
+  text-align: center;
 }
 
-.work{
-    background-color: #f3f4fc;
-    padding-top: 100px;
-    padding-bottom: 70px;
+/* Sección work */
+.work {
+  background-color: #f3f4fc;
+  padding-top: 100px;
+  padding-bottom: 70px;
 }
 
-.projects-wrapper > div{
-    margin:25px 0 0 0;
+.projects-wrapper > div {
+  margin: 25px 0 0 0;
 }
 
-.work-box{
-    position: relative;
-    overflow: hidden; /* Asegura que los elementos internos no se desborden */
-    display: block;
-    padding: 15px;
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    height: 250px;
-    transition: all 0.2s linear; /* Añadido para suavizar la transición */
-    z-index: 1; /* Asegura que las cajas de trabajo estén en el contexto de apilamiento adecuado */
+.work-box {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  padding: 15px;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 250px;
+  transition: all 0.2s linear;
+  z-index: 1;
 }
 
-.work-box a{
-    display: inline-block;
-    position: relative;
-    width: 400px;
-    height: 250px;
+.work-box a {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-.work-box .work-img{
-    width: 100%; /* Ajustado para que ocupe el 100% del contenedor */
-    height: 100%; /* Ajustado para que ocupe el 100% del contenedor */
-    transition: transform 2s linear; /* Suaviza la transición de transformación */
+.work-box .work-img {
+  width: 100%;
+  height: 100%;
+  transition: transform 2s linear;
 }
 
-.work-box:hover .work-overlay{
-    opacity: 1;
-    transform: scale(1);
+.work-box:hover .work-overlay {
+  opacity: 1;
+  transform: scale(1);
 }
 
-.work-box:hover .work-caption{
-    opacity: 1;
+.work-box:hover .work-caption {
+  opacity: 1;
 }
 
-.work-overlay{
-    position:absolute;
-    top:0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    background-color: #fca329;
-    transition: all 0.2s linear;
-    transform: scale(0);
-    z-index: 2; /* Asegura que el overlay esté por encima de otros elementos */
+.work-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  background-color: #fca329;
+  transition: all 0.2s linear;
+  transform: scale(0);
+  z-index: 2;
 }
 
-.work-overlay h5{
-    color: white;
+.work-overlay h5 {
+  color: white;
 }
 
-.work-overlay a{
-    font-size: 12px;
-    letter-spacing: 1.5px;
-    margin-bottom: 0;
-    color: white;
-    text-align: center;
+.work-overlay a {
+  font-size: 12px;
+  letter-spacing: 1.5px;
+  margin-bottom: 0;
+  color: white;
+  text-align: center;
 }
 
-.work-overlay .work-caption{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    opacity: 0;
-    width: 100%;
-    transition: opacity 0.5s linear;
+.work-overlay .work-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  width: 100%;
+  transition: opacity 0.5s linear;
 }
 
-.overlay-icons{
-    border: 2px solid #ffffff;
-    color: white;
-    font-size: 22px;
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
-    line-height: 41px;
-    transition: all 0.5s;
+.overlay-icons {
+  border: 2px solid #ffffff;
+  color: white;
+  font-size: 22px;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  line-height: 41px;
+  transition: all 0.5s;
 }
 
-.overlay-icons:hover{
-    background-color: white;
-    color: #fca329;
-    border: 2px solid white;
+.overlay-icons:hover {
+  background-color: white;
+  color: #fca329;
+  border: 2px solid white;
 }
 
-@media only screen and (max-width: 768px){
-    .list-filter a{
-        padding: 0 5px;
-        margin: 4px 5px;
-        font-size: 14px;
-    }
+@media only screen and (max-width: 768px) {
+  .list-filter a {
+    padding: 0 5px;
+    margin: 4px 5px;
+    font-size: 14px;
+  }
 }
 
-#footer{
-    background-color: #3c3dc1;
+#footer {
+  background-color: #3c3dc1;
 }
 
-.row .contact-box{
-    width: 100%;
-    display: inline-block;
-    text-align: center;
+.row .contact-box {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
 }
 
-#footer h4{
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.3;
-    color: white;
-    display: inline-block;
-    padding: 10px;
-    position: relative;
-    z-index: 1;
+#footer h4 {
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: white;
+  display: inline-block;
+  padding: 10px;
+  position: relative;
+  z-index: 1;
 }
 
-#footer p{
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.3;
-    color: white;
-    display: inline-block;
-    position: relative;
-    z-index: 1;
+#footer p {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: white;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
 }
 
-#footer i{
-    color: white;
+#footer i {
+  color: white;
 }
 
-hr{
-    border-top: 4px outset white;
+hr {
+  border-top: 4px outset white;
 }
 
 #footer i:hover {
-    color: #84fee0;
-    text-decoration: none;
-    transition: 0.5s;
+  color: #84fee0;
+  text-decoration: none;
+  transition: 0.5s;
 }
 
 .language-switcher {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .language-toggle {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    position: fixed;
-    z-index: 1000; /* Asegura que el botón esté por encima de otros elementos */
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  position: fixed;
+  z-index: 1000; /* Asegura que el botón esté por encima de otros elementos */
 }
 
 #languageButton {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
 }
 
 #languageButton img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: transparent; /* Asegura que no haya fondo */
-    display: block;
-    object-fit: cover; /* Asegura que la imagen cubra todo el contenedor circular */
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: transparent; /* Asegura que no haya fondo */
+  display: block;
+  object-fit: cover; /* Asegura que la imagen cubra todo el contenedor circular */
 }
